@@ -1,5 +1,7 @@
 Version 0.9-6 (2015-xx-xx)
   * OPTICS: fixed second bug reported by Di Pang
+  * all methods now also accept dist objects and have a search method "dist"
+    which precomputes distances.
 
 Version 0.9-5 (2015-10-04)
   * OPTICS: fixed bug with first observation reported by Di Pang
